[package]
name = "lsm"
version = "0.5.0-dev"
authors = ["Kai Mast <kai@kaimast.com>"]
edition = "2024"
repository = "https://github.com/kaimast/lsm-rs"
description = "An implementation of log-structured merge trees in pure Rust"
license = "MIT"
readme = "README.md"
keywords = ["storage", "database", "async"]
rust-version = "1.88"

[dependencies]
lru = "0.14"
parking_lot = "0.12"
memmap2 = "0.9"
byte-slice-cast = "1"
zerocopy = { version="0.8", features=["derive"] }
log = "0.4"
futures = "0.3"
snap = { version="1", optional=true }
async-trait = "0.1"
cfg-if = "1"
tracing = { version="0.1", default-features=false, features=["attributes"] }
csv = "1"
tokio-condvar = { version="0.3", features=["parking_lot"] }
tokio-uring = { version="0.5", optional=true }
bloomfilter = { version="3", optional=true }
monoio = { version="0.2", optional=true, features=["sync"] }
kioto-uring-executor = { version="0.3.0-dev", optional=true, default-features=false, features=["macros", "tokio-uring"] }
bitvec = { version="1", optional=true }

[dependencies.tokio]
version="1"
default-features=false
features=["io-util", "sync", "macros", "tracing", "time"]

[dev-dependencies]
rust-hooks = { version="0.12", package="rusty-hooks-integration" }
clap = { version="4", features=["derive"] }
env_logger = "0.11"
tempfile = "3"
tracing-tracy = "0.11"
tokio = { version="1", default-features=false, features=["rt-multi-thread"] }
tracing-subscriber = { version="0.3", default-features=false }
rand = "0.9"

[lib]
path = "src/lib.rs"

[features]
default = ["snappy-compression", "bloom-filters"]
monoio = ["dep:monoio", "_async-io"]
snappy-compression = ["dep:snap"]
wisckey = ["dep:bitvec"]
bloom-filters = ["dep:bloomfilter"]
tokio-uring = ["dep:tokio-uring", "dep:kioto-uring-executor", "_async-io"]
_async-io = []

[[test]]
name = "basic"
path = "tests/basic.rs"

[[test]]
name = "reopen"
path = "tests/reopen.rs"

[[example]]
name = "lsm-benchmark"
path = "benchmarks/async.rs"

[workspace]
members = ["sync", "bigtest"]

[patch.crates-io]
kioto-uring-executor = { git = "https://github.com/kaimast/kioto-uring-executor" }
