[package]
name = "lsm-bigtest"
version = "0.5.0-dev"
edition = "2024"
authors = ["Kai Mast <kai@kaimast.com>"]
license = "MIT"
about = "Runs a longer test with lots of data"
readme = "../README.md"

[dependencies]
kioto-uring-executor = "0.2"

[dependencies.lsm]
path = ".."
features = ["tokio-uring"]
