[package]
name = "lsm-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
lsm = { path=".." }
bincode = "^1.3"
cfg-if = "1"

[dependencies.tokio]
version="1"
default-features=false
features=["rt-multi-thread", "io-util", "sync", "macros", "tracing"]

[dev-dependencies]
env_logger = "0.11"
tempfile = "3"

[features]
default = ["snappy-compression", "bloom-filters"]
snappy-compression = ["lsm/snappy-compression"]
wisckey = ["lsm/wisckey"]
bloom-filters = ["lsm/bloom-filters"]

[[test]]
name = "basic"
path = "tests/basic.rs"

[[test]]
name = "reopen"
path = "tests/reopen.rs"
