[package]
name = "lsm-sync"
version = "0.4.1"
authors = ["Kai Mast <kai@kaimast.com>"]
edition = "2024"
repository = "https://github.com/kaimast/lsm-rs"
description = "Synchronous API for the lsm crate"
license = "MIT"
readme = "../README.md"
keywords = ["storage", "database", "async"]

[dependencies]
lsm = { path=".." }
bincode = "^1.3"
cfg-if = "1"

[dependencies.tokio]
version="1"
default-features=false
features=["rt-multi-thread", "io-util", "sync", "macros", "tracing"]

[dev-dependencies]
env_logger = "0.11"
tempfile = "3"

[features]
default = ["snappy-compression", "bloom-filters"]
snappy-compression = ["lsm/snappy-compression"]
wisckey = ["lsm/wisckey"]
bloom-filters = ["lsm/bloom-filters"]

[[test]]
name = "basic"
path = "tests/basic.rs"

[[test]]
name = "reopen"
path = "tests/reopen.rs"
